--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 project(COP-Final-Proj)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_OSX_ARCHITECTURES x86_64)
+//set(CMAKE_OSX_ARCHITECTURES x86_64)
 
 add_executable(COP-Final-Proj main.cpp Menu.cpp Hangman.cpp Hangman.h breakout1.cpp breakout_defs.h HangmanMenu.cpp HangmanMenu.h)
 set(CMAKE_CXX_STANDARD 17)
